--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "webpack": "^2.3.2"
   },
   "dependencies": {
+    "mobx": "^3.1.7",
+    "mobx-react": "^4.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
